--- a/css/style.css
+++ b/css/style.css
@@ -4,24 +4,51 @@
   box-sizing: border-box;
 }
 
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2{
+  font-size: 35px;
+}
+
 .prop-flex{
   display: flex;
+}
+
+.margin{
+  margin: 30px 0 25px 0;
 }
 
 .border{
   border: 1px solid #d0d0d3;
 }
 
+img{
+  width: 100%;
+}
+
 .wrap{
   flex-wrap: wrap;
+}
+
+
+.widht-80{
+  width: 80%;
+}
+
+.button-blue{
+  border-color: blue;
+  background-color: blue;
+  color: white;
+  padding: 5px 20px 5px 20px;;
 }
 
 .container-big{
   width: 80%;
   height: 800px;
-  background-color: #b4d0e7;
-  
 }
+  
 
 .container-small{
   width: 60%;
@@ -31,7 +58,7 @@
 
 nav{
   height: 60px;
-  background-color: aqua;
+  background-color: white;
 }
 
 header{
@@ -46,6 +73,10 @@ header nav{
   align-items: center;
 } 
 
+header nav ul{
+  align-items: center;
+}
+
 header nav ul li{
   padding: 0 20px;
   list-style: none;
@@ -58,14 +89,38 @@ header nav ul li a{
 
 .jumbotron{
   margin-top: 60px;
-  background-color: blueviolet;
+  background-color: #b4d0e7;
+  min-height: 690px;
+  max-height: 670px;
+}
+
+.jumbotron h1{
+  font-size: 76px;
+  text-align: left;
+}
+
+.jumbotron .button-blue{
+  margin: 25px 0 15px 0;
+}
+.jumbotron i{
+  margin: 25px 0 15px 0;
+  font-size: 40px;
 }
 
 
 .jumbotron .container-big{
   margin: 0 auto;
   text-align: center;
+  padding-top: 80px;
+  justify-content: space-between;
+
 }
+
+.jumbotron .container-big .prop-flex{
+  margin-top: 30px;
+  text-align: left;
+}
+
 
 main .top{
   margin-top: 100px;
@@ -80,6 +135,8 @@ main .three-column section,
 main .prop-flex .card{
   width: calc(90%/3);
 }
+
+
 
 .all-widht-box{
   height: 300px;
