--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h2{
   margin: 30px 0 25px 0;
 }
 
+
 .border{
   border: 1px solid #d0d0d3;
 }
@@ -53,7 +54,6 @@ img{
 .container-small{
   width: 60%;
   margin: 0 auto;
-  background-color: brown;
 }
 
 nav{
@@ -89,7 +89,7 @@ header nav ul li a{
 
 .jumbotron{
   margin-top: 60px;
-  background-color: #b4d0e7;
+  background-color: #d0d0d3;
   min-height: 690px;
   max-height: 670px;
 }
@@ -113,12 +113,28 @@ header nav ul li a{
   text-align: center;
   padding-top: 80px;
   justify-content: space-between;
-
+  
 }
 
 .jumbotron .container-big .prop-flex{
   margin-top: 30px;
   text-align: left;
+}
+
+
+.beetwen-icon{
+ display: flex;
+ justify-content: space-between;
+}
+
+.center-icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 0 15px 0;
+  width: calc(90%/3);
+  border: 1px solid #b4d0e7;
+  border-bottom: 0px;
 }
 
 
@@ -136,7 +152,28 @@ main .prop-flex .card{
   width: calc(90%/3);
 }
 
+main section{
+  padding: 0 30px; 
+  height: 900px;
+}
 
+main section ul{
+  list-style: none;
+}
+
+main section ul li{
+  padding: 10px 0;
+  font-size: 15px;
+}
+
+main section ul li i{
+  padding-right: 3px;
+}
+
+main section .check li i{
+  color: blue;
+  
+}
 
 .all-widht-box{
   height: 300px;
