--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ a{
   color: #0061ff;
 }
 
+hr{
+  color: #d0d0d3;
+}
+
 h2{
   font-size: 42px;
 }
@@ -107,7 +111,7 @@ header nav ul li{
   list-style: none;
 }
 
-header nav ul li a:hover{
+header nav .bottom-line li a:hover{
   border: 2px solid black;
   border-top: 0px;
   border-right: 0px;
@@ -115,10 +119,59 @@ header nav ul li a:hover{
   padding-bottom: 19px;
 }
 
-header nav ul li a{
+header nav ul li a,
+.jumbotron  a{
   text-decoration: none;
   color: black;
 }
+
+header .first-level{
+  position: relative;
+}
+
+header .second-level{
+  position: absolute;
+  top: 40px;
+  left: 20px;
+  opacity: 0;
+  transition: all;
+}
+
+header .first-level :hover .second-level{
+  opacity: 1;
+  top: 44px;
+}
+
+header .second-level li{
+  height: 30px;
+  width: 150px;
+  padding-top: 4px;
+}
+
+header .second-level li a{
+  padding-top: 10px;
+}
+
+header .second-level li{
+  background-color: white;
+  box-shadow: 0 0 3px 
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .jumbotron{
   margin-top: 60px;
@@ -288,14 +341,10 @@ main .quattro{
  }
 
 
-.all-widht-box.one{
-  height: 60vh;
-}
-
 .fixed-square{
   overflow: auto;
-  height: 60vh;
-  width: 40%;
+  height: 30vw;
+  width: 40vw;
   padding: 40px;
 }
 
@@ -310,7 +359,7 @@ main .quattro{
 }
 
 .all-widht-box .immages{
-  width: 30%;
+  width: 30vw;
 }
 
 footer .container-small{
@@ -318,8 +367,8 @@ justify-content: space-between;
 }
 
 .immages .square {  
-  width: calc(100%/2);
-  height: calc(100%/2);
+  width: 15vw;
+  height: 15vw;
   justify-content: center;
   align-items: center;
 }
@@ -380,13 +429,31 @@ background-color: #fed830;
 .container-small.sette{
   margin-top: 80px;
 }
+
+.container-small.sette hr{
+  width: 100%;
+  margin: 10px 0 25px 0;
+}
+
+.accordion:hover .accordion-item:hover .accordion-item-content,
+.accordion .accordion-item--default .accordion-item-content {
+    height: 6em;
+}
+
+.accordion-item-content,
+.accordion:hover .accordion-item-content {
+    height: 0;
+    overflow: hidden;
+    transition: height .25s;
+    color: #919193;
+    margin-top: 20px;
+}
+
 .container-small.sette h3{
-  margin-bottom: 45px;
+  padding-bottom: 45px;
 }
 
 .container-small.sette div{
-  justify-content: space-between;
-  padding: 30px 0px;
   border-left: 0px;
   border-right: 0px;
 }
